auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3b3ad81",
+   "id": "61aeb2b8",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb1a203d",
+   "id": "bc343c08",
    "metadata": {},
    "source": [
     "# About\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e4c56d",
+   "id": "91e63d31",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5452b7d",
+   "id": "594c4ee6",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf0cc9d5",
+   "id": "0a8e8769",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "143f38c4",
+   "id": "abcdced6",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -154,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809441.7255147,
+  "date": 1766815079.249189,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
