--- a/inventory_ssd.ipynb
+++ b/inventory_ssd.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b9c1a0b6",
+   "id": "c6d5dd33",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80add3ca",
+   "id": "66a8554b",
    "metadata": {},
    "source": [
     "# Inventory Management Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef902eb7",
+   "id": "bda7b72e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "943bfbd6",
+   "id": "3234f6ff",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40306968",
+   "id": "f88c03b8",
    "metadata": {},
    "source": [
     "## A model with constant discounting\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c60730",
+   "id": "a9537676",
    "metadata": {},
    "source": [
     "## Time varing discount rates\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b4ab5c",
+   "id": "e4dbfebe",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7286cc71",
+   "id": "93e95d41",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ef7da1",
+   "id": "dfc65594",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef60c403",
+   "id": "a087efd1",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5a6eaed",
+   "id": "b7b373a1",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e4e8fd",
+   "id": "144c1ad2",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the inventory management."
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78211cfd",
+   "id": "ab1add96",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f51895c",
+   "id": "6df8024e",
    "metadata": {
     "hide-output": false
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559c7035",
+   "id": "a823f1b7",
    "metadata": {},
    "source": [
     "Here’s the function `B` on the right-hand side of the Bellman equation."
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9543f3ed",
+   "id": "4dc82d30",
    "metadata": {
     "hide-output": false
    },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b03485",
+   "id": "78b32b57",
    "metadata": {},
    "source": [
     "We need to vectorize this function so that we can use it efficiently in JAX.\n",
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c66157",
+   "id": "e1ffb0de",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8b1b088",
+   "id": "0eb0c0b7",
    "metadata": {},
    "source": [
     "Next we define the Bellman operator."
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e7fe3e",
+   "id": "10c2124c",
    "metadata": {
     "hide-output": false
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccef0a7",
+   "id": "4ee2a0d2",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6b67961",
+   "id": "fd8797cf",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e0afd05",
+   "id": "9e90e665",
    "metadata": {},
    "source": [
     "Here’s code to solve the model using value function iteration."
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fca34b5f",
+   "id": "16529b07",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37265d96",
+   "id": "2cf04d6c",
    "metadata": {},
    "source": [
     "Now let’s create an instance and solve it."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868cde0c",
+   "id": "e9ebff35",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c743dba",
+   "id": "e1b9152e",
    "metadata": {
     "hide-output": false
    },
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7918633c",
+   "id": "66c93fa0",
    "metadata": {},
    "source": [
     "Let’s run again to get rid of the compile time."
@@ -550,7 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f5c4658",
+   "id": "f27e260e",
    "metadata": {
     "hide-output": false
    },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7015d995",
+   "id": "20cb221c",
    "metadata": {},
    "source": [
     "Now let’s do a simulation.\n",
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24e21cd",
+   "id": "381e09eb",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee5c57f",
+   "id": "61beef24",
    "metadata": {},
    "source": [
     "Here’s code to simulate inventories"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b83e458",
+   "id": "560679ec",
    "metadata": {
     "hide-output": false
    },
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3874c06",
+   "id": "55ea6c02",
    "metadata": {},
    "source": [
     "Here’s code to generate a plot."
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b06d843",
+   "id": "0ddbc68b",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7c328a",
+   "id": "44471ad6",
    "metadata": {},
    "source": [
     "Let’s take a look."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecb180c0",
+   "id": "d8205063",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.1039622,
+  "date": 1766815079.6299,
   "filename": "inventory_ssd.md",
   "kernelspec": {
    "display_name": "Python",
