--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "897378c0",
+   "id": "6e8a29b0",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef763af7",
+   "id": "69d67e0b",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098b0da0",
+   "id": "50270fbf",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6d815db",
+   "id": "7d832f8d",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3609ff36",
+   "id": "692db114",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131f6376",
+   "id": "f80aa464",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "299a77df",
+   "id": "e26715a1",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5349b520",
+   "id": "ca1b2ce5",
    "metadata": {},
    "source": [
     "### Set up\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88789a2b",
+   "id": "74258e75",
    "metadata": {},
    "source": [
     "### Rewards\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a58d8d",
+   "id": "7d7f452f",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b11a21d",
+   "id": "0181d2c6",
    "metadata": {
     "hide-output": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "586b8c86",
+   "id": "1552d80d",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the `namedtuple`."
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "044b9c6f",
+   "id": "bf2e5e01",
    "metadata": {
     "hide-output": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7ddf5d1",
+   "id": "e17dc8f0",
    "metadata": {},
    "source": [
     "Let’s test it:"
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "145dc62e",
+   "id": "40ec49b3",
    "metadata": {
     "hide-output": false
    },
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "551ed706",
+   "id": "82ae109d",
    "metadata": {
     "hide-output": false
    },
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4791c2f7",
+   "id": "be28b2ab",
    "metadata": {
     "hide-output": false
    },
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c7240c1",
+   "id": "345a4032",
    "metadata": {
     "hide-output": false
    },
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8601f38",
+   "id": "cd2d2386",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e0028f7",
+   "id": "26dc8494",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e48670",
+   "id": "29cfc6f0",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07929eaa",
+   "id": "a7f48b96",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "284f10fa",
+   "id": "0536b3c7",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21b9d8e2",
+   "id": "f5f7a84f",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd1e1f8",
+   "id": "ec6be76f",
    "metadata": {},
    "source": [
     "## Computing the solution\n",
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d5e2ab",
+   "id": "44c85bbb",
    "metadata": {
     "hide-output": false
    },
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ea836a",
+   "id": "de0be4a3",
    "metadata": {},
    "source": [
     "Here’s the optimal policy:"
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f16fa320",
+   "id": "15a08a10",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fa5a99c",
+   "id": "087be2db",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f226531b",
+   "id": "a6d58f6e",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d863da8",
+   "id": "f0446d05",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "058fd449",
+   "id": "3d0581d4",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5929da2b",
+   "id": "e9fdf183",
    "metadata": {},
    "source": [
     "Here’s a joint plot of the value function and the reservation wage."
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d586708",
+   "id": "9f242de4",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ede4e8b",
+   "id": "b81b1f2e",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d64e13",
+   "id": "6dc9168e",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "827b86a0",
+   "id": "c9e7c3b7",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f12942b",
+   "id": "f6197733",
    "metadata": {},
    "source": [
     "Now you need to modify `T` and `get_greedy` and then run value function iteration again."
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "552b0598",
+   "id": "51404a3d",
    "metadata": {},
    "source": [
     "## Solution"
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82fef69a",
+   "id": "18e44c0a",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a1649e8",
+   "id": "343a4506",
    "metadata": {},
    "source": [
     "Let’s plot the results together with the original risk neutral case and see what we get."
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef95cea1",
+   "id": "277fd1c4",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0f2061",
+   "id": "a0e75d5a",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfbff44c",
+   "id": "13c9ecd9",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -707,7 +707,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.224608,
+  "date": 1766815079.7512653,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
