--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f4bc0e8",
+   "id": "abb8318d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5768e2",
+   "id": "37652a41",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c5ccde",
+   "id": "1df805a8",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d88af21a",
+   "id": "3b4c3db3",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282f7c7c",
+   "id": "9b0217bc",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce74804e",
+   "id": "0af6820e",
    "metadata": {
     "hide-output": false
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2afcf45",
+   "id": "a43d7882",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45f2cd5a",
+   "id": "2f4510bc",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef95c89b",
+   "id": "9103a0e5",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b286f9f4",
+   "id": "2531a8d0",
    "metadata": {
     "hide-output": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d91aab6",
+   "id": "5c706314",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00c82f2d",
+   "id": "10733ddc",
    "metadata": {
     "hide-output": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3962aaf3",
+   "id": "69f0de81",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f824834",
+   "id": "ac5e61c0",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b6f0e6",
+   "id": "0c87711b",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f69dcbc",
+   "id": "fbd32f35",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4b791f",
+   "id": "d77534aa",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf101c47",
+   "id": "232513b4",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d657912a",
+   "id": "8302b61f",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc8c03c6",
+   "id": "5c73f9b8",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6e3f963",
+   "id": "0f0d577a",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97414d38",
+   "id": "d0569850",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06123420",
+   "id": "e1194608",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a459ef7",
+   "id": "6f7a3531",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4995a8b",
+   "id": "19fc3e4c",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ca48ce",
+   "id": "cd430995",
    "metadata": {
     "hide-output": false
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "396d1e29",
+   "id": "0c8bb0f3",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc19d291",
+   "id": "246d2d62",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27104f94",
+   "id": "ae0bdeb9",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81c5b8da",
+   "id": "934148b3",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7689441",
+   "id": "26158c53",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ea68f97",
+   "id": "67dbeff4",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "590bf93e",
+   "id": "fd3cd67a",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4f424c",
+   "id": "50168386",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68434bcf",
+   "id": "45ab6fa8",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ceb3eb",
+   "id": "de0990fd",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5db22a",
+   "id": "6891585e",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4ac853a",
+   "id": "bede7b8a",
    "metadata": {
     "hide-output": false
    },
@@ -690,7 +690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e73d7e29",
+   "id": "b2166250",
    "metadata": {
     "hide-output": false
    },
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "831f94ca",
+   "id": "6a0fff94",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1c4e810",
+   "id": "bb7ecf5f",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c6d522",
+   "id": "826d3d5f",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "370b7c05",
+   "id": "2059118b",
    "metadata": {
     "hide-output": false
    },
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0507df12",
+   "id": "3881d0e5",
    "metadata": {
     "hide-output": false
    },
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1d670e6",
+   "id": "270ede1c",
    "metadata": {
     "hide-output": false
    },
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3bcbaf2",
+   "id": "9aa4f1ef",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc998f4f",
+   "id": "05d0b0b8",
    "metadata": {
     "hide-output": false
    },
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f153080f",
+   "id": "f48cfaf5",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beb5d5ff",
+   "id": "a6e18bf9",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321da9f2",
+   "id": "ca79d97d",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f352b0ee",
+   "id": "92376ec0",
    "metadata": {
     "hide-output": false
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bff4da0",
+   "id": "5796c705",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8565b87",
+   "id": "6c82d457",
    "metadata": {
     "hide-output": false
    },
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd9461d",
+   "id": "e29b91c3",
    "metadata": {
     "hide-output": false
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc49cf2",
+   "id": "b219946c",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97b5a9f5",
+   "id": "3eec0fdf",
    "metadata": {
     "hide-output": false
    },
@@ -935,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9784b25a",
+   "id": "a38f23bc",
    "metadata": {
     "hide-output": false
    },
@@ -951,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bedc83",
+   "id": "dc1f8f09",
    "metadata": {
     "hide-output": false
    },
@@ -973,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c367d8a2",
+   "id": "ee9b9e6f",
    "metadata": {
     "hide-output": false
    },
@@ -993,7 +993,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.455719,
+  "date": 1766815079.9831996,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
