--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83712ef3",
+   "id": "d849eb7b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dbfa62b",
+   "id": "bf4d5d6d",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f0741ef",
+   "id": "edc4f19f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59b6ea88",
+   "id": "86ad872e",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bda024a",
+   "id": "b892e481",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a8b5224",
+   "id": "db3c21dc",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57bb8dbe",
+   "id": "e8682015",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31904064",
+   "id": "ec89cae6",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8bcedb2",
+   "id": "7bbf697f",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d047052",
+   "id": "d35c0a81",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bac5655",
+   "id": "4511dc3a",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c220548",
+   "id": "094b9ad8",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c23c9f",
+   "id": "94c68650",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "419378b4",
+   "id": "3897c4c3",
    "metadata": {
     "hide-output": false
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "818e7904",
+   "id": "5132a573",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1439064",
+   "id": "70806774",
    "metadata": {
     "hide-output": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865e5b4b",
+   "id": "6979420d",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121ea8eb",
+   "id": "12b3c638",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53a2d680",
+   "id": "e0880ac0",
    "metadata": {
     "hide-output": false
    },
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8fc55c9",
+   "id": "0fe589e9",
    "metadata": {
     "hide-output": false
    },
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7391fc6d",
+   "id": "049c6b5d",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f07bbc6",
+   "id": "ad5a4d4a",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf97fe0",
+   "id": "76f29bd5",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66127d6",
+   "id": "041ecb25",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "315482e3",
+   "id": "f03b36cc",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64fd3981",
+   "id": "fa698322",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "306f7f12",
+   "id": "c98947ee",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b0b4279",
+   "id": "58b85bf0",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93e83001",
+   "id": "5f13c76c",
    "metadata": {
     "hide-output": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d0ab5b",
+   "id": "23d64cef",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e103cc60",
+   "id": "150f2ccc",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04b51bdf",
+   "id": "a58e6f8b",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecfd3bae",
+   "id": "2604c7e1",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be0202d2",
+   "id": "edbcec8a",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2000374",
+   "id": "df9b5ad1",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48bf673",
+   "id": "a50a5129",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4333bbe9",
+   "id": "24267c4e",
    "metadata": {
     "hide-output": false
    },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81889c15",
+   "id": "fcd2ef73",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df34c984",
+   "id": "e249d7c3",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de1ddd1f",
+   "id": "669d27e8",
    "metadata": {
     "hide-output": false
    },
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c0ab95",
+   "id": "9003df3b",
    "metadata": {
     "hide-output": false
    },
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723959c0",
+   "id": "f58866f8",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e8c0f7",
+   "id": "e5a3421d",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf73e286",
+   "id": "a46eaad2",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b705e75a",
+   "id": "e6bdbda4",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c50eb606",
+   "id": "cbb2005c",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a003254",
+   "id": "8a68ce17",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20e979b9",
+   "id": "8ac5e202",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480dd9b4",
+   "id": "3de196f7",
    "metadata": {
     "hide-output": false
    },
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed82d565",
+   "id": "295ef2c9",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1729baed",
+   "id": "f9d56170",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c61ef34b",
+   "id": "eb9d8140",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4063ba6f",
+   "id": "c991d4e5",
    "metadata": {
     "hide-output": false
    },
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3a653c",
+   "id": "07b6cffb",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c090d7",
+   "id": "c9ca0aa1",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38fd6c22",
+   "id": "80bc5dec",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1187,7 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25dd5a5e",
+   "id": "e618bc91",
    "metadata": {
     "hide-output": false
    },
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aa0be4c",
+   "id": "b614389d",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d285dbe",
+   "id": "31db30ac",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38b509cf",
+   "id": "9212c6ba",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1802e0f",
+   "id": "d260fd12",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99fd0a86",
+   "id": "ce0f47af",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3328e53",
+   "id": "fb0465a4",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c722f8fa",
+   "id": "b12de90d",
    "metadata": {
     "hide-output": false
    },
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15f52cc5",
+   "id": "71d548e5",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cffb21e3",
+   "id": "c9fc9a31",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49fafe71",
+   "id": "03aaa452",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1350,7 +1350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8564d21",
+   "id": "4f71ecb1",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a17212",
+   "id": "65f58254",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "227b2c2c",
+   "id": "4dc55668",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1404,7 +1404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be00280",
+   "id": "19915381",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fb614aa",
+   "id": "102d0d96",
    "metadata": {
     "hide-output": false
    },
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b05d978",
+   "id": "9200fd5c",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fe66abd",
+   "id": "eaa7588c",
    "metadata": {
     "hide-output": false
    },
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a8e0c0",
+   "id": "69482c70",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1459,7 +1459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79563115",
+   "id": "83650899",
    "metadata": {
     "hide-output": false
    },
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1835baaf",
+   "id": "8e79d588",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14127b51",
+   "id": "638c7896",
    "metadata": {
     "hide-output": false
    },
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07432f10",
+   "id": "51689ac9",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1513,7 +1513,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.5765972,
+  "date": 1766815080.106015,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
