--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a05079e",
+   "id": "2e22cd2b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cae69108",
+   "id": "340c2987",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -22,33 +22,33 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/autodiff.html)[](https://jax.quantecon.org/hopenhayn.html)[](https://jax.quantecon.org/ifp_dl.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/inventory_ssd.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/jax_nn.html)[](https://jax.quantecon.org/job_search.html)[](https://jax.quantecon.org/keras.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/lucas_model.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings_1.html)[](https://jax.quantecon.org/opt_savings_2.html)[](https://jax.quantecon.org/overborrowing.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2025-12-22 03:40|cache|67.14|✅|\n",
-    "|arellano|2025-12-22 03:40|cache|22.95|✅|\n",
-    "|autodiff|2025-12-22 03:41|cache|13.41|✅|\n",
-    "|hopenhayn|2025-12-22 03:41|cache|25.67|✅|\n",
-    "|ifp_dl|2025-12-22 03:42|cache|35.55|✅|\n",
-    "|ifp_egm|2025-12-22 03:44|cache|144.14|✅|\n",
-    "|intro|2025-12-22 03:44|cache|0.79|✅|\n",
-    "|inventory_dynamics|2025-12-22 03:44|cache|8.79|✅|\n",
-    "|inventory_ssd|2025-12-22 03:44|cache|9.65|✅|\n",
-    "|jax_intro|2025-12-22 03:45|cache|19.64|✅|\n",
-    "|jax_nn|2025-12-22 03:45|cache|42.98|✅|\n",
-    "|job_search|2025-12-22 03:46|cache|10.07|✅|\n",
-    "|keras|2025-12-22 03:46|cache|26.81|✅|\n",
-    "|kesten_processes|2025-12-22 03:46|cache|11.68|✅|\n",
-    "|lucas_model|2025-12-22 03:47|cache|18.54|✅|\n",
-    "|markov_asset|2025-12-22 03:47|cache|12.36|✅|\n",
-    "|mle|2025-12-22 03:47|cache|17.16|✅|\n",
-    "|newtons_method|2025-12-22 03:50|cache|191.25|✅|\n",
-    "|opt_invest|2025-12-22 03:51|cache|22.75|✅|\n",
-    "|opt_savings_1|2025-12-22 03:51|cache|42.64|✅|\n",
-    "|opt_savings_2|2025-12-22 03:52|cache|21.2|✅|\n",
-    "|overborrowing|2025-12-22 03:52|cache|24.39|✅|\n",
-    "|short_path|2025-12-22 03:52|cache|4.16|✅|\n",
-    "|status|2025-12-22 03:52|cache|7.13|✅|\n",
-    "|troubleshooting|2025-12-22 03:44|cache|0.79|✅|\n",
-    "|wealth_dynamics|2025-12-22 03:55|cache|154.33|✅|\n",
-    "|zreferences|2025-12-22 03:44|cache|0.79|✅|\n",
+    "|aiyagari_jax|2025-12-27 05:03|cache|68.0|✅|\n",
+    "|arellano|2025-12-27 05:03|cache|22.68|✅|\n",
+    "|autodiff|2025-12-27 05:03|cache|13.41|✅|\n",
+    "|hopenhayn|2025-12-27 05:04|cache|25.72|✅|\n",
+    "|ifp_dl|2025-12-27 05:04|cache|35.39|✅|\n",
+    "|ifp_egm|2025-12-27 05:07|cache|144.53|✅|\n",
+    "|intro|2025-12-27 05:07|cache|0.91|✅|\n",
+    "|inventory_dynamics|2025-12-27 05:07|cache|9.1|✅|\n",
+    "|inventory_ssd|2025-12-27 05:07|cache|9.88|✅|\n",
+    "|jax_intro|2025-12-27 05:08|cache|19.15|✅|\n",
+    "|jax_nn|2025-12-27 05:08|cache|43.19|✅|\n",
+    "|job_search|2025-12-27 05:08|cache|10.06|✅|\n",
+    "|keras|2025-12-27 05:09|cache|27.37|✅|\n",
+    "|kesten_processes|2025-12-27 05:09|cache|11.63|✅|\n",
+    "|lucas_model|2025-12-27 05:09|cache|18.34|✅|\n",
+    "|markov_asset|2025-12-27 05:10|cache|11.94|✅|\n",
+    "|mle|2025-12-27 05:10|cache|17.11|✅|\n",
+    "|newtons_method|2025-12-27 05:13|cache|191.06|✅|\n",
+    "|opt_invest|2025-12-27 05:13|cache|22.84|✅|\n",
+    "|opt_savings_1|2025-12-27 05:14|cache|42.3|✅|\n",
+    "|opt_savings_2|2025-12-27 05:15|cache|21.05|✅|\n",
+    "|overborrowing|2025-12-27 05:15|cache|24.0|✅|\n",
+    "|short_path|2025-12-27 05:15|cache|4.47|✅|\n",
+    "|status|2025-12-27 05:15|cache|6.99|✅|\n",
+    "|troubleshooting|2025-12-27 05:07|cache|0.91|✅|\n",
+    "|wealth_dynamics|2025-12-27 05:17|cache|140.91|✅|\n",
+    "|zreferences|2025-12-27 05:07|cache|0.91|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions` that has\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ce7a3b2",
+   "id": "c92bcf95",
    "metadata": {
     "hide-output": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c30aaeb7",
+   "id": "853bde59",
    "metadata": {},
    "source": [
     "and the following package versions"
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f9b54c0",
+   "id": "0eaabb99",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fb035f5",
+   "id": "1fc60ad2",
    "metadata": {},
    "source": [
     "You can check the backend used by JAX using:"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de663de4",
+   "id": "a65f6827",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc87a64",
+   "id": "bcc5f243",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab5340d",
+   "id": "4caba879",
    "metadata": {
     "hide-output": false
    },
@@ -133,7 +133,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.614795,
+  "date": 1766815080.1447842,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
