--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbd7e4f3",
+   "id": "cc4e2a37",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f6a55ea",
+   "id": "c2e11cc7",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca5f56a1",
+   "id": "d782ff46",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f85882",
+   "id": "95e8bdc6",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ace11ad0",
+   "id": "8a095d32",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f96219",
+   "id": "8e06f5cc",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40ae528",
+   "id": "3bce1a80",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5af99ab3",
+   "id": "0e3b11be",
    "metadata": {},
    "source": [
     "## The Model"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79819912",
+   "id": "15c82b97",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "500df1db",
+   "id": "43dfed5f",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -189,7 +189,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-9690fa6c-78a6-4178-aa46-11e93dc6e5d0'></a>\n",
+    "<a id='equation-3cbe9da0-ded4-466b-8b7b-4d6d67be256e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -202,7 +202,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-e02efb59-1af9-4773-9aab-367e1b63c6b6'></a>\n",
+    "<a id='equation-8bbb0e6a-4457-4604-b46d-c37603b8753e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d426a8",
+   "id": "a15c2435",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -256,7 +256,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-757f7762-5993-48fe-92dc-2db201140060'></a>\n",
+    "<a id='equation-4a0d120d-7d14-4e0b-bd23-bc75c78ecbe8'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -266,7 +266,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-7044d585-f6ed-4357-82d3-45d2098c6f0c'></a>\n",
+    "<a id='equation-8c7366db-2f5e-4661-8b15-49fe90e62205'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -280,7 +280,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-98f34ba1-a265-4aba-8328-e63ce78f9a18'></a>\n",
+    "<a id='equation-7f0ebc00-8a4b-4fa8-aef5-7f178db9337b'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -290,7 +290,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-7576d769-9b2b-4fa5-8f7e-e51307e5a70c'></a>\n",
+    "<a id='equation-bdaae53e-4599-43a2-8b67-990cb8dd2af0'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b67b95",
+   "id": "0f9d6219",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -315,7 +315,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-90ff4be9-9ca6-4e9a-b3d9-6d32b7d74dd6'></a>\n",
+    "<a id='equation-fc368dbf-9e0e-4f5f-8f81-4c77cda2cc0a'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -327,7 +327,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-3de31b16-d361-4560-9979-500ddce51076'></a>\n",
+    "<a id='equation-9fa7fd5e-c0d6-462b-b662-f02380ac41ad'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef4d04f4",
+   "id": "0f614de4",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "601af05c",
+   "id": "26b97d8f",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe27f3a5",
+   "id": "5023b898",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041e4c24",
+   "id": "ff02b85a",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc24f55b",
+   "id": "8b30d05a",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ae7721a",
+   "id": "19a0fc3e",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91779f78",
+   "id": "5215717a",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7fb1ec",
+   "id": "f4f6aafe",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c6a2ceb",
+   "id": "7395daf0",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dadeb94f",
+   "id": "67a2a8e7",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acfbf367",
+   "id": "502b4c99",
    "metadata": {
     "hide-output": false
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb6f203f",
+   "id": "b4396723",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8788ff69",
+   "id": "20ec7df3",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fe9ee6b",
+   "id": "50b53957",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4204f51d",
+   "id": "4b212d7c",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87969271",
+   "id": "e5fe09b4",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2707a63",
+   "id": "c5dd27b1",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a3538e",
+   "id": "34943aab",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d330d2c0",
+   "id": "f4bfff68",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "587177bb",
+   "id": "8cd785fc",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4075b90a",
+   "id": "8e166356",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21a5488c",
+   "id": "7ebf367f",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f14d9c41",
+   "id": "34a73a96",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85a104ad",
+   "id": "f6f3d366",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cae525f",
+   "id": "e0e7443e",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e42028",
+   "id": "21cdb267",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb295df8",
+   "id": "846512d4",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eafb55e6",
+   "id": "133be9f8",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c6bf157",
+   "id": "df5976ed",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "764acce9",
+   "id": "974a6bed",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "173a0f65",
+   "id": "8d38a284",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95fdccaf",
+   "id": "914ba9b2",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40d00513",
+   "id": "ad925923",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321191ee",
+   "id": "6dd7f781",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62ba8324",
+   "id": "6186fa21",
    "metadata": {
     "hide-output": false
    },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf2ab05",
+   "id": "c91df863",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd95ffc7",
+   "id": "1467901b",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8d0f74",
+   "id": "e14804c7",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "540d0c20",
+   "id": "d9001673",
    "metadata": {
     "hide-output": false
    },
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d2d185",
+   "id": "046895c0",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b8cf0c",
+   "id": "8d2c179a",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28974ebe",
+   "id": "08792821",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b612d9ae",
+   "id": "36cf2bb8",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b2d6d8f",
+   "id": "c190800f",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a63c5b82",
+   "id": "5bdff2d6",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93149a40",
+   "id": "a9af5ed8",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca3b3432",
+   "id": "d7d7ad72",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d7cc065",
+   "id": "87610c83",
    "metadata": {
     "hide-output": false
    },
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13423981",
+   "id": "b094d42e",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d105dc9",
+   "id": "db61bb1f",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "185cc603",
+   "id": "54fd7206",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a575993f",
+   "id": "43bb1591",
    "metadata": {
     "hide-output": false
    },
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c84d630",
+   "id": "f3e18685",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79bfa0f7",
+   "id": "ece41c87",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a36c3f2",
+   "id": "f7c1981d",
    "metadata": {
     "hide-output": false
    },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c16210bf",
+   "id": "726929c8",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e7d4b5",
+   "id": "866590b7",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "244ccc52",
+   "id": "0147d33d",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0da705ff",
+   "id": "e544c9d1",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49cdd64d",
+   "id": "5ba82f87",
    "metadata": {
     "hide-output": false
    },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5401d385",
+   "id": "e9c8a2fb",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f59349d",
+   "id": "6f315463",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bfb7494",
+   "id": "46001297",
    "metadata": {
     "hide-output": false
    },
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3006b23",
+   "id": "fc139fdd",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86a7d9a",
+   "id": "3fee7e5a",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb785195",
+   "id": "b30f8f92",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "677acf82",
+   "id": "dee549e3",
    "metadata": {},
    "source": [
     "## Solution"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "248eb0eb",
+   "id": "4e21df31",
    "metadata": {
     "hide-output": false
    },
@@ -1432,7 +1432,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809441.9823554,
+  "date": 1766815079.506163,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
