--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "74eb268e",
+   "id": "3d4cbb8f",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087282ab",
+   "id": "c05eec88",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e97265b",
+   "id": "3fb1f129",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ba9e5e",
+   "id": "ef3a79aa",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9e3fe45",
+   "id": "c0b56ea1",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e3ab2d",
+   "id": "b9fb8909",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e5391f",
+   "id": "0c8b301d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5a6f5bb",
+   "id": "88d5ac9e",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da076ce",
+   "id": "09561c05",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43dfde32",
+   "id": "796bace9",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5bd88e",
+   "id": "4f8973d5",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a8dc7fc",
+   "id": "8daf5ff3",
    "metadata": {
     "hide-output": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e5e5a8",
+   "id": "f8a0af75",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58a652c1",
+   "id": "4da3c2b8",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bf1fbbc",
+   "id": "605de5a8",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1152453e",
+   "id": "1bf76716",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb84a9e",
+   "id": "5f6236b0",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa9efca9",
+   "id": "c98e7fda",
    "metadata": {
     "hide-output": false
    },
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e7cf280",
+   "id": "82dd9a32",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b4cf09",
+   "id": "6b00ae28",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed36d99",
+   "id": "18483b86",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b1d9a4",
+   "id": "db95f138",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14a9eb25",
+   "id": "611999dd",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba44482e",
+   "id": "1a8fefb6",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6d2e83b",
+   "id": "489ee86a",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "279372a3",
+   "id": "2912d484",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444895ca",
+   "id": "0a473ee6",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d3a8ff9",
+   "id": "448f4c9a",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e75e5944",
+   "id": "75f7ec34",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117e493e",
+   "id": "b34b65ec",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f45d6f",
+   "id": "943698ec",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a72b05cc",
+   "id": "590032f5",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a842f76",
+   "id": "aa462b5b",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -781,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510cfc1b",
+   "id": "30695d05",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea3dfbf4",
+   "id": "416d8249",
    "metadata": {
     "hide-output": false
    },
@@ -813,7 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18a74b4",
+   "id": "04338b5f",
    "metadata": {
     "hide-output": false
    },
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3457672",
+   "id": "67c63bcc",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -835,7 +835,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.0453517,
+  "date": 1766815079.569539,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
