--- a/keras.ipynb
+++ b/keras.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce97c496",
+   "id": "03816971",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ade7ea1",
+   "id": "26c05d88",
    "metadata": {},
    "source": [
     "# Simple Neural Network Regression with Keras and JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67186a88",
+   "id": "4b964b76",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afbad6e6",
+   "id": "c7dc331e",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72c12e51",
+   "id": "ade4e728",
    "metadata": {},
    "source": [
     "Let’s install Keras."
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fab1a6fb",
+   "id": "e7a1f1d6",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5156afa5",
+   "id": "5d1ac15d",
    "metadata": {},
    "source": [
     "Now we specify that the desired backend is JAX."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "257795df",
+   "id": "f70e25ad",
    "metadata": {
     "hide-output": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f12acf",
+   "id": "2d16b9e5",
    "metadata": {},
    "source": [
     "Now we should be able to import some tools from Keras.\n",
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7c8514",
+   "id": "15035570",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5aa9730",
+   "id": "80ba48c4",
    "metadata": {},
    "source": [
     "## Data\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d1a35d",
+   "id": "27067d9d",
    "metadata": {
     "hide-output": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b409df",
+   "id": "aee7ee0f",
    "metadata": {},
    "source": [
     "Now we generate some data to train the model."
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2daf4e0",
+   "id": "e6c7a631",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f9785a3",
+   "id": "243599f6",
    "metadata": {},
    "source": [
     "Here’s a plot of the training data."
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d2a936",
+   "id": "d50da27e",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b96694b",
+   "id": "cfda55d0",
    "metadata": {},
    "source": [
     "We’ll also use data from the same process for cross-validation."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b6ef3f",
+   "id": "da2a0902",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a10b246c",
+   "id": "726a1b06",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22668f81",
+   "id": "1e90e1b1",
    "metadata": {},
    "source": [
     "## Regression model\n",
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59a8610d",
+   "id": "f01611bb",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93587c86",
+   "id": "a6219faa",
    "metadata": {},
    "source": [
     "In the function above you can see that\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b76c6b53",
+   "id": "1b36025b",
    "metadata": {},
    "source": [
     "### Deep Network\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c62e81",
+   "id": "5979f7de",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e10b09e",
+   "id": "3cd5d24b",
    "metadata": {},
    "source": [
     "### Tracking errors\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab96411",
+   "id": "eb9fd7ea",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "493cdd44",
+   "id": "b2be946a",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c185272",
+   "id": "59b9395b",
    "metadata": {},
    "source": [
     "### Linear regression\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c112654",
+   "id": "380ef84d",
    "metadata": {
     "hide-output": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9c2938a",
+   "id": "f898d340",
    "metadata": {},
    "source": [
     "Now we train the model using the training data."
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed898b77",
+   "id": "ad433de4",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67cc4fe8",
+   "id": "55cb9b61",
    "metadata": {},
    "source": [
     "Let’s have a look at the evolution of MSE as the model is trained."
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e5ed99",
+   "id": "e81786d6",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132a59af",
+   "id": "59989ffd",
    "metadata": {},
    "source": [
     "Let’s print the final MSE on the cross-validation data."
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8550d780",
+   "id": "53757e1d",
    "metadata": {
     "hide-output": false
    },
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9277fc36",
+   "id": "f81a1426",
    "metadata": {},
    "source": [
     "Here’s our output predictions on the cross-validation data."
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb8b490",
+   "id": "5c2993cd",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5807936",
+   "id": "8348c395",
    "metadata": {},
    "source": [
     "We use the following function to plot our predictions along with the data."
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef479c1",
+   "id": "3e2d0696",
    "metadata": {
     "hide-output": false
    },
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e15ace",
+   "id": "6f78cdeb",
    "metadata": {},
    "source": [
     "Let’s now call the function on the cross-validation data."
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2269c3ce",
+   "id": "b6326305",
    "metadata": {
     "hide-output": false
    },
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881a71b9",
+   "id": "5fa3cd5c",
    "metadata": {},
    "source": [
     "### Deep learning\n",
@@ -562,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bb3b81c",
+   "id": "f9f37a0e",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "743602ef",
+   "id": "d7a76a19",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a49959f3",
+   "id": "898bc8e0",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a358bf1",
+   "id": "a25de2c3",
    "metadata": {},
    "source": [
     "Here’s the final MSE for the deep learning model."
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8f3d51",
+   "id": "4af4b98f",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfe8357",
+   "id": "e74124cd",
    "metadata": {},
    "source": [
     "You will notice that this loss is much lower than the one we achieved with\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d79af6c",
+   "id": "f30ac358",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc58013",
+   "id": "c429f28c",
    "metadata": {
     "hide-output": false
    },
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b80d122",
+   "id": "2e25f26c",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a5a3d1",
+   "id": "0e3b5e83",
    "metadata": {},
    "source": [
     "Not surprisingly, the multilayer neural network does a much better job of fitting the data.\n",
@@ -685,7 +685,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.246822,
+  "date": 1766815079.7735481,
   "filename": "keras.md",
   "kernelspec": {
    "display_name": "Python",
