--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "855475bd",
+   "id": "8f2cd61b",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82a870a6",
+   "id": "6a74a444",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef355b0",
+   "id": "0cdc3219",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8feb3d9b",
+   "id": "1d17a2b0",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7420edb8",
+   "id": "13c2e4d9",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91e7e8eb",
+   "id": "c657d2c4",
    "metadata": {
     "hide-output": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c1bdc6",
+   "id": "1522755e",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b86c037",
+   "id": "30cf7c98",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "355380bf",
+   "id": "1b50cda8",
    "metadata": {},
    "source": [
     "## Wealth dynamics\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd3838e",
+   "id": "d8a0af33",
    "metadata": {},
    "source": [
     "## Implementation"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3898dd84",
+   "id": "f68e5223",
    "metadata": {},
    "source": [
     "### Numba implementation\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b276ba86",
+   "id": "d165ea25",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8421acb",
+   "id": "49b43356",
    "metadata": {},
    "source": [
     "Here’s a function that generates the aggregate state process"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "397be24e",
+   "id": "51cd5df7",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f7e31e",
+   "id": "7ebf2807",
    "metadata": {},
    "source": [
     "Here’s a function that updates household wealth by one period, taking the\n",
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f38d4ce9",
+   "id": "0a2a49f6",
    "metadata": {
     "hide-output": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98a92e9",
+   "id": "7c5c4b93",
    "metadata": {},
    "source": [
     "Here’s a function to simulate the time series of wealth for an individual household"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f4424f3",
+   "id": "be7a4320",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e05da26",
+   "id": "c2c9087e",
    "metadata": {},
    "source": [
     "Let’s look at the wealth dynamics of an individual household"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5908f434",
+   "id": "be2787dd",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133664b7",
+   "id": "6f858d26",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e40c906d",
+   "id": "c70ffa8c",
    "metadata": {},
    "source": [
     "Notice the large spikes in wealth over time.\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2ee27e9",
+   "id": "f71515f6",
    "metadata": {
     "hide-output": false
    },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23163fd1",
+   "id": "5d609cb6",
    "metadata": {},
    "source": [
     "Parallelization works in the function above because the time path of each\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff2a422c",
+   "id": "24a8960d",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcee90e1",
+   "id": "abf7ebd4",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c98d54a0",
+   "id": "8d28eff5",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b03833",
+   "id": "cc6c6302",
    "metadata": {},
    "source": [
     "### JAX implementation\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad0b3dec",
+   "id": "c593116e",
    "metadata": {
     "hide-output": false
    },
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9c9236",
+   "id": "df087a98",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to shift the cross-section of households forward\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa6f400f",
+   "id": "5d340ee2",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5edc75f",
+   "id": "2225dac1",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8293fd1",
+   "id": "e8ee41ea",
    "metadata": {
     "hide-output": false
    },
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6506d20d",
+   "id": "0076c9a4",
    "metadata": {},
    "source": [
     "And let’s see how long it takes if we compile the loop."
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "922555b3",
+   "id": "56593c6e",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6002c127",
+   "id": "795d581c",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4780cc0",
+   "id": "94fcfffa",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78dee35c",
+   "id": "c4290c11",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7cf3b02",
+   "id": "978af082",
    "metadata": {
     "hide-output": false
    },
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "243975e3",
+   "id": "c499c897",
    "metadata": {},
    "source": [
     "### Pareto tails\n",
@@ -745,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "146d8420",
+   "id": "ea248158",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d548964",
+   "id": "bc4a4f18",
    "metadata": {},
    "source": [
     "### Lorenz curves and Gini coefficients\n",
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9318f4ee",
+   "id": "6f43c4cc",
    "metadata": {},
    "source": [
     "#### Lorenz curve\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd03f2fb",
+   "id": "ca76312e",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c91e192",
+   "id": "4706e84a",
    "metadata": {},
    "source": [
     "Let’s test"
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9503ab61",
+   "id": "f4b4dcec",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bc0443",
+   "id": "6cb381ff",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c6f30e4",
+   "id": "e45ec301",
    "metadata": {
     "hide-output": false
    },
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2235b3c",
+   "id": "7c2281ae",
    "metadata": {
     "hide-output": false
    },
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8550f630",
+   "id": "b6d8ece1",
    "metadata": {
     "hide-output": false
    },
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48914995",
+   "id": "55336cb3",
    "metadata": {},
    "source": [
     "#### Gini Coefficient\n",
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aed7c550",
+   "id": "3ff17d42",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29f41b4a",
+   "id": "70d68984",
    "metadata": {
     "hide-output": false
    },
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf4d7594",
+   "id": "b920fdad",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f88339f5",
+   "id": "1edae798",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ed78ec9",
+   "id": "2d191334",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a56d08f",
+   "id": "03ce18c7",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1150424",
+   "id": "34f1b7f1",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e6d495e",
+   "id": "328904ab",
    "metadata": {
     "hide-output": false
    },
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3bf114a",
+   "id": "6fa18a60",
    "metadata": {
     "hide-output": false
    },
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a18302c",
+   "id": "55e3d858",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bca09e4",
+   "id": "468dc555",
    "metadata": {
     "hide-output": false
    },
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbb1fec",
+   "id": "08f70320",
    "metadata": {},
    "source": [
     "## Exercise 7.2\n",
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db766388",
+   "id": "9bcbdf3a",
    "metadata": {
     "hide-output": false
    },
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59cc963f",
+   "id": "46e9acd2",
    "metadata": {},
    "source": [
     "Use the following as your initial cross-sectional distribution"
@@ -1115,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7edccf4",
+   "id": "88526ea0",
    "metadata": {
     "hide-output": false
    },
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d5ba534",
+   "id": "6bddc8e0",
    "metadata": {},
    "source": [
     "Once you have done that, plot the Gini coefficients as well.\n",
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "374722b8",
+   "id": "ad963a00",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ad7513",
+   "id": "bb8ae204",
    "metadata": {
     "hide-output": false
    },
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c673a90",
+   "id": "228ba7f6",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -1184,7 +1184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f84b48e7",
+   "id": "f0dec907",
    "metadata": {
     "hide-output": false
    },
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f31f705e",
+   "id": "61a8d5b6",
    "metadata": {},
    "source": [
     "As expected, inequality increases as returns on financial income rise."
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09a428e3",
+   "id": "6d3a9425",
    "metadata": {},
    "source": [
     "## Exercise 7.3\n",
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c0f4f09",
+   "id": "247e0bfd",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a1e84ed",
+   "id": "830b87f9",
    "metadata": {},
    "source": [
     "To isolate the role of volatility, set $ \\mu_r = - \\sigma_r^2 / 2 $ at each $ \\sigma_r $.\n",
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa5beefc",
+   "id": "8ee92d9a",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "351d8cc8",
+   "id": "6bd73096",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "581a60fb",
+   "id": "8840554f",
    "metadata": {
     "hide-output": false
    },
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afb6a77e",
+   "id": "f95e8ac4",
    "metadata": {},
    "source": [
     "## Exercise 7.4\n",
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61481b92",
+   "id": "190ee463",
    "metadata": {},
    "source": [
     "## Solution\n",
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b749f28",
+   "id": "81684dc9",
    "metadata": {
     "hide-output": false
    },
@@ -1368,7 +1368,7 @@
   }
  ],
  "metadata": {
-  "date": 1766809442.6524742,
+  "date": 1766815080.183025,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
